# facebox

./: .gitignore  README.md  pyproject.toml
notebooks/: square_crop.py
src/facebox/: __init__.py  facebok.py  facebox.py
