[project]
name = "facebox"
version = "0.1.1"
description = "facebox is a library for processing face images."
readme = "README.md"
authors = [{ name = "simon.m.hofmann", email = "simon.hofmann@cbs.mpg.de" }]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8,<3.11",
    "mediapipe==0.10.21",  # TODO: switch from solution to task API in newer version of mediapipe (>=0.10.30)
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86,<5",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.15.10,<1", "ty>=0.0.29,<1"]
